--- a/consultor.html
+++ b/consultor.html
@@ -10,10 +10,10 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    <nav>
+    <header>
         <a href="#" class="menuPrincipal">MENU</a>
-        <a href="#"class="sparkle">SPARKLE</a>
-    </nav>
+        <h1 class="sparkle">SPARKLE</h1>
+    </header>
 <main>
     <div class="botaoMenu">
         <a href="index.html" class="textoBotaoMenu">HOME</a>
@@ -33,13 +33,14 @@
 <div id="content">
     <h2>Cadastro de Pedido</h2>
     <form>
-        <p class="textoCaixa">Nome do Cliente<input type="text" name="cadastroCliente" id="cadastroCliente" class="ladoEsquerdo">
-        CPF/CNPJ<input type="number" name="codigoCliente" id="codigoCliente" class="ladoDireito"></p>
+        <p class="textoCaixa">Nome do Cliente<input type="text" name="cadastroCliente" id="cadastroCliente" class="ladoEsquerdo" class="cadastroCliente">
+        CPF/CNPJ<input type="number" name="codigoCliente" id="codigoCliente" class="ladoDireito" ></p>
         <br>
         <p class="textoCaixa">CEP <input type="text" name="cepCliente" id="cepCliente" class="ladoEsquerdo"> Endereço do cliente <input type="text" name="ruaCliente" id="ruaCliente" class="ladoDireito"></p>
         <br>
         <p class="textoCaixa">Bairro <input type="text" name="bairroCliente" id="bairroCliente" class="ladoEsquerdo">
-        Cidade <input type="text" name="cidadeCliente" id="cidadeCliente" class="ladoDireito"> Email do Cliente <input type="text" name="cidadeCliente" id="cidadeCliente" class="ladoDireito"> </p>
+        Cidade <input type="text" name="cidadeCliente" id="cidadeCliente" class="ladoDireito"><br>
+         Email do Cliente <input type="text" name="emailCliente" id="emailCliente" class="ladoDireito"> </p>
         <br>
         <p class="textoValor">Valor Total <input type="text" name="valorPedido" id="valorPedido" class="ladoEsquerdo"></p>
         
