--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <nav>
+    <header>
         <a href="#" class="menuPrincipal">MENU</a>
-        <a href="#"class="sparkle">SPARKLE</a>
-    </nav>
+        <h1 class="sparkle">SPARKLE</h1>
+    </header>
 <main class="main">
 <div class="botaoMenu">
     <a href="index.html" class="textoBotaoMenu">HOME</a>
