--- a/solicitacoes.html
+++ b/solicitacoes.html
@@ -10,10 +10,10 @@
     <script src="app.js" defer></script>
     </head>
 <body>
-    <nav>
+    <header>
         <a href="#" class="menuPrincipal">MENU</a>
-        <a href="#"class="sparkle">SPARKLE</a>
-    </nav>
+        <h1 class="sparkle">SPARKLE</h1>
+    </header>
 <main>
     <div class="botaoMenu">
         <a href="index.html" class="textoBotaoMenu">HOME</a>
