--- a/consultor.html
+++ b/consultor.html
@@ -10,10 +10,10 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    <header>
+    <nav>
         <a href="#" class="menuPrincipal">MENU</a>
         <h1 class="sparkle">SPARKLE</h1>
-    </header>
+    </nav>
 <main>
     <div class="botaoMenu">
         <a href="index.html" class="textoBotaoMenu">HOME</a>
@@ -36,7 +36,7 @@
         <p class="textoCaixa">Nome do Cliente<input type="text" name="cadastroCliente" id="cadastroCliente" class="ladoEsquerdo" class="cadastroCliente">
         CPF/CNPJ<input type="number" name="codigoCliente" id="codigoCliente" class="ladoDireito" ></p>
         <br>
-        <p class="textoCaixa">CEP <input type="text" name="cepCliente" id="cepCliente" class="ladoEsquerdo"> Endereço do cliente <input type="text" name="ruaCliente" id="ruaCliente" class="ladoDireito"></p>
+        <p class="textoCaixa">CEP <input type="text" name="cepCliente" id="cepCliente" class="ladoEsquerdo"> Endereço <input type="text" name="ruaCliente" id="ruaCliente" class="ladoDireito"></p>
         <br>
         <p class="textoCaixa">Bairro <input type="text" name="bairroCliente" id="bairroCliente" class="ladoEsquerdo">
         Cidade <input type="text" name="cidadeCliente" id="cidadeCliente" class="ladoDireito"><br>
