--- a/solicitacoes.html
+++ b/solicitacoes.html
@@ -10,10 +10,10 @@
     <script src="app.js" defer></script>
     </head>
 <body>
-    <header>
+    <nav>
         <a href="#" class="menuPrincipal">MENU</a>
         <h1 class="sparkle">SPARKLE</h1>
-    </header>
+    </nav>
 <main>
     <div class="botaoMenu">
         <a href="index.html" class="textoBotaoMenu">HOME</a>
