--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header>
+    <nav>
+        
         <a href="#" class="menuPrincipal">MENU</a>
         <h1 class="sparkle">SPARKLE</h1>
-    </header>
+    </nav>
 <main class="main">
 <div class="botaoMenu">
     <a href="index.html" class="textoBotaoMenu">HOME</a>
