--- a/consultor.html
+++ b/consultor.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="assets/favicon.ico.jpg" type="image/x-icon">
     <title>Sparkle - Consultor</title>
     <link rel="stylesheet" href="style/style.css">
-    <script src="app.js" defer></script>
+    
 </head>
 <body>
     <nav>
@@ -36,10 +36,10 @@
         <p class="textoCaixa">Nome do Cliente<input type="text" name="cadastroCliente" id="cadastroCliente" class="ladoEsquerdo" class="cadastroCliente">
         CPF/CNPJ<input type="number" name="codigoCliente" id="codigoCliente" class="ladoDireito" ></p>
         <br>
-        <p class="textoCaixa">CEP <input type="text" name="cepCliente" id="cepCliente" class="ladoEsquerdo"> Endereço <input type="text" name="ruaCliente" id="ruaCliente" class="ladoDireito"></p>
+        <p class="textoCaixa">CEP <input type="text" name="cepCliente" id="cepCliente" onblur="buscarCep()" class="ladoEsquerdo"> Endereço <input type="text" name="ruaCliente" id="ruaCliente" class="ladoDireito"> Número <input type="text" name="numeroCliente" id="numeroCliente"></p>
         <br>
         <p class="textoCaixa">Bairro <input type="text" name="bairroCliente" id="bairroCliente" class="ladoEsquerdo">
-        Cidade <input type="text" name="cidadeCliente" id="cidadeCliente" class="ladoDireito"><br>
+        Cidade <input type="text" name="cidadeCliente" id="cidadeCliente" class="ladoDireito"> UF <input type="text" name="ufCliente" id="ufCliente"> <br>
          Email do Cliente <input type="text" name="emailCliente" id="emailCliente" class="ladoDireito"> </p>
         <br>
         <p class="textoValor">Valor Total <input type="text" name="valorPedido" id="valorPedido" class="ladoEsquerdo"></p>
@@ -52,6 +52,6 @@
 <footer>
     <p class="textoFooter">Desenvolvido por Sparkle - Tera 2022</p>
 </footer> 
-
+<script src="app.js" defer></script>
 </body>
 </html>
